rke2.d/catalog/mesh/headplane/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${headplane-namespace} # kpt-set: ${headplane-namespace}
