rke2.d/catalog/mesh/headplane/06-service-headplane.yaml
apiVersion: v1
kind: Service
metadata:
  name: headplane
  namespace: ${headscale-namespace} # kpt-set: ${headscale-namespace}
  labels:
    app: headplane
spec:
  type: LoadBalancer
  selector:
    app: headplane
  ports:
    - name: http
      port: 3000
      targetPort: http
