rke2.d/catalog/mesh/headplane/07-ingress-headplane.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headplane
  namespace: ${headscale-namespace} # kpt-set: ${headscale-namespace}
  annotations:
    kubernetes.io/ingress.class: ${headplane-ingress-class} # kpt-set: ${headplane-ingress-class}
    io.cilium/lb-ipam-ips: ${cluster-lan-headplane-inetaddr} # kpt-set: ${cluster-lan-headplane-inetaddr}
    lab42.io/mdns.enabled: "true"
    lab42.io/mdns.name: ${headplane-mdns-hostname} # kpt-set: ${headplane-mdns-hostname}
    lab42.io/mdns.host: ${headplane-mdns-hostname} # kpt-set: ${headplane-mdns-hostname}
spec:
  ingressClassName: ${headplane-ingress-class} # kpt-set: ${headplane-ingress-class}
  rules:
    - host: ${headplane-ingress-host} # kpt-set: ${headplane-ingress-host}
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: headplane
                port:
                  number: 3000
